--- a/src/List.css
+++ b/src/List.css
@@ -1,4 +1,9 @@
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
+.List {
+  margin-top: 20px;
+
+}
+label.ProductLabel {
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
 }
