--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
   font-family: 'Roboto', sans-serif;
 }
