--- a/src/List.css
+++ b/src/List.css
@@ -1,3 +1,8 @@
 .List {
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
+}
+label.ProductLabel span:last-of-type{
+  padding-left: 30px;
 }
