--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 100px;
   height: 100vh;
   width: 100vw;
   font-family: 'Roboto', sans-serif;
